<resources>

    <!--    Main Activity-->
    <string name="app_name">Save Money</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgetpass">Forget Password</string>
    <string name="gotosignpu">Don\'t Have an Account?  Sign Up</string>

    <!--Register Activity-->
    <string name="gotosignin">Already Have an Account?  Sign in</string>

    <!--DayExpenses Activity-->
    <string name="todayexp">Today Expenses Summary</string>
    <string name="date">Transaction Date</string>
    <string name="expmethod">Transaction Method</string>
    <string name="paidto">Paid to</string>
    <string name="Description">Description</string>
    <string name="amount">Amount</string>
    <string name="TOTAL">TOTAL</string>
    <string name="BALANCE">BALANCE</string>
    <string name="Add">Add</string>
    <string name="delet">Delete</string>
    <string name="viewdata">View Data</string>
    <string name="income">Income</string>
    <string name="logout">Logout</string>

    <!--Income Activity-->
    <string name="IncomeFrom">Income From</string>
    <string name="TodayIncomeSummary">Today Income Summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonChange">buttonChange</string>


</resources>
