<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/signup"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            android:translationZ="20dp"/>
        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:translationZ="20dp">
        </ImageView>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/colorwhite"
            android:textSize="16sp"
            android:translationZ="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:background="@drawable/button_corner"/>

        <EditText
            android:id="@+id/mobileno"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:background="@drawable/button_corner"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorwhite"
            android:background="@drawable/button_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"/>


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_shape"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            android:textSize="17sp"
            android:translationZ="20dp"/>

        <TextView
            android:id="@+id/signIn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="Already Have an Account?  Sign in"
            android:textAllCaps="true"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="#FAD0E1"
            android:fontFamily="sans-serif"/>

    </LinearLayout>
</RelativeLayout>